--- a/.gitignore
+++ b/.gitignore
@@ -129,3 +129,8 @@ dmypy.json
 .pyre/
 Egyetem 20220919/main2.py
 Egyetem 20220919/main.py
+Egyetem 20220919/20220919/main.py
+Egyetem 20220919/20220919/main2.py
+Egyetem 20220919/20220926/main.py
+Egyetem 20220919/20220926/main2.py
+Egyetem 20220919/20220926/main3.py
